--- a/14_parssing/quotes.html
+++ b/14_parssing/quotes.html
@@ -10,6 +10,8 @@
     He my friends.
 </h6>
 
+<a href="google.com">MY reference</a>
+<br>
 Today is a <strong>good</strong> wether.
 </body>
 </html>
